2005-05-23  Alexey Shchepin  <alexey@sevcom.net>

	* doc/guide.tex: Updated (thanks to Sergei Golovan)
	* doc/dev.tex: Likewise
	* doc/disco.png: Likewise
	* doc/discorus.png: Likewise
	* doc/webadmin.png: Likewise
	* doc/webadminru.png: Likewise

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)
	* src/msgs/uk.msg: Likewise

	* src/web/ejabberd_web_admin.erl: Updated CSS, added modules
	management, fixed bug with configuring of listened ports on
	different nodes (thanks to Sergei Golovan)

	* src/gen_mod.erl: Added function loaded_modules_with_opts/0, new
	API for module stopping (thanks to Sergei Golovan)
	* src/mod_muc/mod_muc.erl: Moved a process name to a macros,
	updated module stopping (thanks to Sergei Golovan)
	* src/mod_irc/mod_irc.erl: Likewise
	* src/mod_pubsub/mod_pubsub.erl: Likewise
	* src/mod_announce.erl: Updated module stopping (thanks to Sergei
	Golovan)
	* src/mod_echo.erl: Likewise
	* src/mod_offline.erl: Likewise

	* src/web/ejabberd_http.erl: "Connection:" header value now
	matched case-insensitive, and returned to client, replaced
	duplicate is_space($\r) with is_space($\t) (thanks to Maxim
	Ryazanov)

2005-05-21  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_pubsub/mod_pubsub.erl: Fixed XML element name for
	pubsub#event namespace (thanks to Magnus Henoch)

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)
	* src/msgs/uk.msg: Likewise

	* src/msgs/es.msg: Updated (thanks to Badlop)

2005-05-19  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_pubsub/mod_pubsub.erl: Now possible to subscribe to a
	pubsub node with a JID that includes a resource (thanks to Martijn
	van Beers)

	* src/stringprep/uni_parse2.tcl: Bugfix
	* src/stringprep/stringprep_drv.c: Likewise
	* src/stringprep/uni_norm.c: Regenerated

2005-05-18  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_irc/mod_irc_connection.erl: Added support for WHOIS
	requests and reply to USERINFO (thanks to Oleg V. Motienko)

2005-05-17  Alexey Shchepin  <alexey@sevcom.net>
