@@ -82,7 +82,7 @@ discipline (see~\ref{sec:modiqdiscoption}).}
 \author{Alexey Shchepin \\
   \ahrefurl{mailto:alexey@sevcom.net} \\
   \ahrefurl{xmpp:aleksey@jabber.ru}}
-\date{April 18, 2005}
+\date{May 23, 2005}
 
 \begin{document}
 \begin{titlepage}
